fixed button tap styling on iOS devices

--- a/profiles/static/profiles/hiroki.css
+++ b/profiles/static/profiles/hiroki.css
@@ -212,6 +212,8 @@ button {
 
 .project-button:hover {
     background-color: rgba(255, 255, 255, 0.4);
+
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 .button-arrow {
