--- a/projects/static/projects/glassmorphism/glassmorphism.css
+++ b/projects/static/projects/glassmorphism/glassmorphism.css
@@ -24,6 +24,11 @@ h2 {
     font-weight: 700;
 }
 
+h3 {
+    font-size: 1.3rem;
+    font-weight: 700;
+}
+
 pre {    
     border-radius: .5rem;
 }
@@ -33,7 +38,7 @@ code {
 }
 
 .code-block {
-    margin: 1.5rem 0;
+    margin: 1rem 0;
 
     width: calc(100vw - 4rem);
     max-width: calc(800px - 2rem - 4px);
@@ -69,6 +74,8 @@ p {
 
 .back-button:hover {
     background-color: rgba(255, 255, 255, 0.3);
+
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 .back-button-arrow {
